# math-lib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg_rf.txt
examples/: CMakeLists.txt
examples/circle/: CMakeLists.txt  circle.cpp
math_lib/: CMakeLists.txt
math_lib/include/math_lib/matrix/: matrix.h
math_lib/src/base_operations/: CMakeLists.txt  float_operations.cpp  float_operations.h
math_lib/src/matrix/: CMakeLists.txt  lup_decomposition.h  lup_decomposition.tcc  matrix.h  matrix.tcc  transformation.h  transformation.tcc
perf_tests/: CMakeLists.txt  generate_input.py  product_test.cpp  product_test_numpy.py
raytracer/: CMakeLists.txt  raytracer.cpp  raytracer.h  test.cpp
raytracer/examples/circle/: circle.cpp
raytracer/graphics/tests/: canvas_tests.cpp
raytracer/include/raytracer/: graphics.h  math.h
raytracer/math/: constants.h  float_operations.h  lup_decomposition.h  lup_decomposition.tcc  matrix.h  matrix.tcc  matrix_tests.cpp  transformation.h  transformation.tcc  transformations_tests.cpp
raytracer/src/basic_shapes/: sphere.h
raytracer/src/graphics/: canvas.h  geometry.cpp  geometry.h  image.h  ray.cpp  ray.h  render.cpp  render.h
raytracer/src/math/: constants.h  float_operations.cpp  float_operations.h  lup_decomposition.h  lup_decomposition.tcc  matrix.h  matrix.tcc
raytracer/src/shapes/: intersections.h  shape.h  sphere.h
unit_tests/: CMakeLists.txt  test_main.cpp
unit_tests/graphics/: canvas_tests.cpp  geometry_tests.cpp  ray_tests.cpp  shape_tests.cpp
unit_tests/math/: matrix_tests.cpp  transformations_tests.cpp
unit_tests/matrix/: matrix_tests.cpp  transformations_tests.cpp
